test/fail/unterminated-block-comment.rnp
#*
---
SyntaxError: Unterminated block comment
 --> fail/unterminated-block-comment.rnp:1:3
  |
1 | #*
  |   ^ Unterminated block comment
  |
